--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.22)
 
 set(PROJECT_NAME GPEngine)
 
-add_subdirectory(GPEditor)
-add_subdirectory(GPCore)
+add_subdirectory(GPEngineEditor)
+add_subdirectory(GPEngineCore)
 
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT GPEngineEditor)
