--- a/GPEngineCore/CMakeLists.txt
+++ b/GPEngineCore/CMakeLists.txt
@@ -2,9 +2,17 @@ cmake_minimum_required(VERSION 3.22)
 
 set(ENGINE_PROJECT_NAME GPEngineCore)
 
+set(ENGINE_PUBLIC_INCLUDES
+	includes/GPEngineCore/Application.hpp
+)
+
+set(ENGINE_PRIVATE_SOURCES
+	src/GPEngineCore/Application.cpp
+)
+
 add_library(${ENGINE_PROJECT_NAME} STATIC
-	src/GPEngineCore/Utils/test.cpp
-	includes/GPEngineCore/Utils/test.hpp
+	${ENGINE_PUBLIC_INCLUDES}
+	${ENGINE_PRIVATE_SOURCES}
 )
 
 target_include_directories(${ENGINE_PROJECT_NAME} PUBLIC includes)
