--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Binaries/*
 
 # Builds
 Build/*
+build/.vs/Project/v16/Browse.VC.db
+build/.vs/Project/v16/.suo
+build/.vs/Project/v16/Browse.VC.db
+build/.vs/Project/v16/Solution.VC.db
