--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ build/.vs/Project/v16/Browse.VC.db
 build/.vs/Project/v16/.suo
 build/.vs/Project/v16/Browse.VC.db
 build/.vs/Project/v16/Solution.VC.db
+build/.vs/Project/v16/Browse.VC.db
+build/.vs/Project/v16/ipch/AutoPCH/70021fbc327d1ec7/APPLICATION.ipch
